# flowq-app

./: .gitignore  App.tsx  CLAUDE.md  README.md  README.zh.md  index.html  metadata.json  package.json  pnpm-lock.yaml  tsconfig.json  types.ts  vite.config.ts
components/: AgentSteps.tsx  ApiManager.tsx  ArchitectureDiagram.tsx  Attachments.tsx  ChatList.tsx  ChatModeSelector.tsx  (+26 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/claude-agent-sdk/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  LICENSE  README.md
src-tauri/patches/claude-agent-sdk/examples/: bidirectional_demo.rs  hooks_demo.rs  interactive_client.rs  mcp_demo.rs  permissions_demo.rs  simple_query.rs
src-tauri/patches/claude-agent-sdk/src/: error.rs  lib.rs  query.rs  types.rs
src-tauri/patches/claude-agent-sdk/src/client/: mod.rs
src-tauri/patches/claude-agent-sdk/src/control/: mod.rs  protocol.rs
src-tauri/patches/claude-agent-sdk/src/hooks/: mod.rs
src-tauri/patches/claude-agent-sdk/src/mcp/: mod.rs  protocol.rs  server.rs  tool.rs
src-tauri/patches/claude-agent-sdk/src/message/: mod.rs  parser.rs
src-tauri/patches/claude-agent-sdk/src/permissions/: mod.rs
src-tauri/patches/claude-agent-sdk/src/transport/: mod.rs  subprocess.rs
src-tauri/patches/claude-agent-sdk/tests/: client_tests.rs  control_protocol_tests.rs
src-tauri/src/: chat.rs  db.rs  lib.rs  main.rs  mcp.rs  memory_index.rs  memory_tool.rs  rss.rs  rss_db.rs  skill.rs
src-tauri/src/browser/: http_api.rs  mod.rs  server.rs  types.rs
(+31 files in other folders)
