[package]
name = "flowq"
version = "0.1.0"
description = "FlowQ - Information Management with AI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flowq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"
# Claude Agent SDK
claude-agent-sdk = "0.1.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
# SQLite for chat history storage
rusqlite = { version = "0.31", features = ["bundled"] }
# Skills management
reqwest = { version = "0.12", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
urlencoding = "2"
# AWS Bedrock support
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1.3.4"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
# 使用本地 patch 版本，增加超时时间到 5 分钟
claude-agent-sdk = { path = "patches/claude-agent-sdk" }
